# mafw-gst-renderer

./: Makefile.am  acinclude.m4  autogen.sh  configure.ac  mafw-gst-renderer-uninstalled.pc.in
debian/: changelog  control  mafw-gst-renderer.postinst  mafw-gst-renderer.prerm  mafw-gst-renderer.xsession  rules
libmafw-gst-renderer/: Makefile.am  blanking.c  blanking.h  gstscreenshot.c  gstscreenshot.h  keypad.c  keypad.h  mafw-gst-renderer-marshal.list  mafw-gst-renderer-state-paused.c  mafw-gst-renderer-state-paused.h  mafw-gst-renderer-state-playing.c  mafw-gst-renderer-state-playing.h  mafw-gst-renderer-state-stopped.c  mafw-gst-renderer-state-stopped.h  mafw-gst-renderer-state-transitioning.c  mafw-gst-renderer-state-transitioning.h  mafw-gst-renderer-state.c  mafw-gst-renderer-state.h  mafw-gst-renderer-utils.c  mafw-gst-renderer-utils.h  mafw-gst-renderer-worker-volume.c  mafw-gst-renderer-worker-volume.h  mafw-gst-renderer-worker.c  mafw-gst-renderer-worker.h  mafw-gst-renderer.c  mafw-gst-renderer.h  mafw-playlist-iterator.c  mafw-playlist-iterator.h
tests/: Makefile.am  check-mafw-gst-renderer.c  check-main.c  mafw-mock-playlist.c  mafw-mock-playlist.h  mafw-mock-pulseaudio.c  mafw-mock-pulseaudio.h  mafw-test-player.c  test.suppressions
tests/media/: test.avi
